<resources>
    <string name="app_name">Sweet Nothings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="generate_phrase_title">Generate</string>
    <string name="generate_send">Send</string>
    <string name="generate_failed_message_title">Sorry, we didn\'t find any new sayings</string>
    <string name="generate_failed_message_body">Please check back later for new Sweet Nothings.</string>
    <string name="generate_send_title">Send to</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="generate_text_area">Write a message here or click generate</string>
</resources>
